# ONT-MHC-genotyper

./: .gitignore  LICENSE  README.md  environment.yml  pixi.toml  pyproject.toml
ref/: 31588_MCM_MHC_miseq_deduplicated_annotated.fa  Mane_MiSeq-IPD_17.06.01_2.2.0.0_plus_SP_RW.fasta  README.md  fluidigm.txt  mhc_specific_primers.fa  sample_mapping_template.csv
test_data/: README.md
workflow/: mhc_genotyping.nf  nextflow.config
