[project]
name = "mhc-genotyping"
version = "1.0.0"
description = "MHC genotyping system for Oxford Nanopore sequencing data with Fluidigm tag-based demultiplexing"
authors = [
    {name = "MHC Genotyping Team"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "pysam>=0.21.0",
    "xlsxwriter>=3.0.0",
    "biopython>=1.80",
    "openpyxl>=3.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]